style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oxanium:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Pixels&family=Varela+Round&display=swap');

*
{
    margin: 0px;
    padding: 0px;
    font-family: "Plus Jakarta Sans", sans-serif;
    font-weight: 400;
}

a
{
    text-decoration: none;
    color: white;
}

/* H E A D E R */

.welcome-background
{
    width: 100%;
    /* height: 1250px; */

    background-image: url('images/Hero\ Section.png');

    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;

    /* border: 1px solid red; */

    display: flex;
    flex-direction: column;
    align-items: center;

    color: white;
}

.header-container
{
    width: 1440px;
    /* border: 1px solid red; */
    border-bottom: 1px solid rgba(255, 255, 255, 0.16);

    display: flex;
    justify-content: space-around;
    align-items: center;

    padding: 16px;
}

.logo img
{
    width: 180px;
}

.pages ul
{
    position: relative;

    display: flex;
    list-style-type: none;
}

.menu
{
    display: flex;
    column-gap: 48px;
}

.menu-button
{
    display: none;
}

.pages ul li
{
    font-size: 20px;
}

.pages ul li a
{
    position: relative;
}

.pages ul li a::after
{
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 0%;
    height: 1px;
    background-color: rgb(255, 255, 255);
    transition: 0.5s ease-in-out;
}
.pages ul li a:hover::after
{
    width: 100%;
}

.open-menu, .close-menu
{
    position: absolute;
    cursor: pointer;
    font-size: 25px;
    display: none;
}

.open-menu
{
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

.close-menu
{
    top: 20px;
    right: 20px;
}

#check
{
    display: none;
}

.header-buttons
{
    /* border: 1px solid red; */
    display: flex;
    column-gap: 32px;
}

.login-button, .demo-button
{
    /* border: 1px solid red; */
    font-size: 20px;
    border: none;
    cursor: pointer; 
}

.login-button
{
    padding: 8px;
    color: rgba(195, 212, 233, 1);
    font-size: 20px;
    background: none;
}

.demo-button
{
    padding: 16px 28px;
    color: white;
    font-size: 20px;
    border-radius: 30px;
    background-color: rgba(124, 92, 252, 1);

    animation: container-glow 2s infinite alternate;
    transition: box-shadow 0.3s ease;
}

/* W E L C O M E */

.welcome
{
    margin-top: 200px;
    width: 1440px;
    /* border: 1px solid red; */
}

.welcome-container
{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    text-align: center;
    height: 965px;
}

.welcome-container-text
{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    row-gap: 32px;
}

.welcome-container-text-inner
{
    border: 0px solid white;
    height: 200px;
    line-height: 200px;
    overflow: hidden;
}

.welcome-container-text-inner span
{
    position: relative;
    animation: text-change 10s ease infinite;
}

.welcome-container-text h1
{
    font-size: 72px;
    font-weight: 700;
    width: 1000px;
    line-height: 100px;
}

.welcome-container-text p
{
    color: rgba(144, 163, 191, 1);
    font-size: 24px;
    font-weight: 300;
    width: 800px;
    line-height: 36px;
}

.welcome-container-buttons
{
    display: flex;
    justify-content: center;
    align-items: center;
    column-gap: 32px;
}

.price-button
{
    padding: 16px 28px;
    color: rgba(195, 212, 233, 1);
    font-size: 20px;
    background-color: rgba(26, 32, 44, 1);
    border: none;
    border-radius: 30px;

    cursor: pointer;
}

.welcome-container-image
{
    margin-top: 100px;
    /* border: 1px solid red; */
    width: 1440px;
    
}

.welcome-container-image img
{
    border-radius: 12px;
    animation: container-glow2 2s infinite alternate;
    transition: box-shadow 0.3s ease;
    width: 1440px;
    height: 475px;
    object-position: top;
    object-fit: cover;
}

/* B E N E F I T */

.benefit
{   
    margin-top: 200px;
    
    display: flex;
    flex-direction: column;
    align-items: center;
    /* border: 1px solid red; */
}

.benefit-container
{
    width: 1440px;
    /* border: 1px solid red; */
}

.benefit-container-upper
{
    display: flex;
    justify-content: space-between;
    /* border: 1px solid red; */
}

.helper
{
    width: 100px;
}

.benefit-container-upper-left
{
    /* border: 1px solid red; */
    display: flex;
    flex-direction: column;
    row-gap: 16px;
    width: 250px;
}

.benefit-container-upper-left h1
{
    color: rgba(124, 92, 252, 1);
    font-size: 24px;
}

.benefit-container-upper-left h2
{
    font-size: 32px;
    font-weight: bold;
    line-height: 48px;
}

.benefit-container-upper-right
{
    /* border: 1px solid red; */
    width: 520px;

    display: flex;
    align-items: center;
}

.benefit-container-upper-right p
{
    font-size: 20px;
    color: rgba(89, 103, 128, 1);
}

.benefit-container-lower
{
    margin-top: 50px;
    /* border: 1px solid red; */
    
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    position: relative;
}

.benefit-container-lower-content
{
    width: 400px;
    display: flex;
    flex-direction: column;
    row-gap: 16px;
    
    /* border: 1px solid red; */
    border-radius: 8px;
    box-shadow: 10px 5px 5px rgb(222, 222, 222);
    position: relative;
    transition: 0.5s;
}

.benefit-container-lower-content:hover
{
    transition: 0.5s;
    box-shadow: 15px 10px 10px rgb(222, 222, 222);
}

.benefit-image-container
{
    position: relative;
    width: 400px;
    height: 400px;
    background-color: rgba(243, 245, 247, 1);
    border-radius: 12px;

    overflow: hidden; /* sakrije ostatak slike */
}
/* ... */

